# cpp_vision_testing

./: CMakeLists.txt  README.md  cam.py  image_test.py
src/: vision_test.cpp
